# timeManager

./: .gitignore  README.md  pyproject.toml
timemanager/: __main__.py  application.py  timemanager.py
timemanager/cli/: main.py
timemanager/model/: model.py
timemanager/plugins/: plugin.py  pluginHandler.py
timemanager/plugins/random/: random.py
timemanager/plugins/timers/: timers.py  timers_handler.py
timemanager/presenter/: PriorityHandler.py  Statuses.py  ViewData.py  presenter.py
timemanager/utils/: settings.py
timemanager/view/: CustomGroupBox.py  CustomListView.py  MainWindow.py  Ui_mainWindow.py  VerboseView.py  ViewUpdateTimers.py  listItem.py  mainWindow.ui
